# HW4-Graph-Guided-AI-Debugging-Agent

./: .env-example  .gitignore  LICENSE  README.md  plan.md  prd.md  pyproject.toml  todo.md
artifacts/graphify/: RUN.md  graph.html  graph.json  manifest.json
assets/: README.md  architecture.mmd  oop.mmd
config/: default.yaml
data/pysnooper-bugsinpy-1/: SETUP.md
data/pysnooper-subject-env/: pyproject.toml
docs/: PLAN.md  PRD.md  PRD_multiagent.md  PRD_token_ledger.md  README.md  TODO.md
notebooks/: experiment.ipynb
obsidian/: Architecture.md  GRAPH_REPORT.md  God nodes.md  hot.md  index.md
obsidian/findings/: UTF-8 log path.md
obsidian/suspects/: FileWriter encoding.md
reports/: PHASE6_RUNS.md  PHASE7.md  READINESS_VERDICT.md  architecture.md  bug_analysis.md  extensions.md  god_nodes.md  graph_sanity.md  sample_impact.md  token_comparison.md
results/: baseline_red.txt
scripts/: run_subject_baseline.ps1
src/graphdebug/: __init__.py  cli.py  cli_bugargs.py  cli_experiment.py  cli_handlers.py  cli_phase7.py  constants.py
tests/integration/: investigation_fixtures.py  test_investigation_smoke.py
tests/unit/: analysis_fixtures.py  cli_phase7_fixtures.py  experiment_fixtures.py  test_agents_budget.py  test_agents_supervisor.py  test_analysis.py  test_cli.py  test_cli_phase7.py  test_config.py  test_experiment_artifacts.py  test_experiment_kpi.py  test_experiment_load.py  test_experiment_runner.py  test_experiment_sdk.py  test_file_line_limits.py  test_fixverify_apply.py  test_fixverify_bug_analysis.py  test_fixverify_regression.py  test_fixverify_review.py  test_fixverify_vault_delta.py  test_gatekeeper.py  (+15 more)
(+248 files in other folders)
