[project]
name = "graphdebug"
version = "0.1.0"
description = "HW4 graph-guided multi-agent debugging agent (graphdebug)"
authors = [
    { name = "Saed-Abdalgani", email = "Saed-Abdalgani@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain-core>=1.4.1",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
graphdebug = "graphdebug.cli:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.16",
]
experiment = [
    "ipykernel>=7.2.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/graphdebug/sdk/api.py" = ["I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=src --cov-report=term-missing --cov-fail-under=85"

[tool.coverage.run]
branch = true
source = ["src"]
